src/test/ui/compile-fail-migration/packed-struct-transmute.stderr
error[E0512]: transmute called with types of different sizes
  --> $DIR/packed-struct-transmute.rs:35:24
   |
LL |         let oof: Oof = mem::transmute(foo);
   |                        ^^^^^^^^^^^^^^
   |
   = note: source type: Foo (72 bits)
   = note: target type: Oof (128 bits)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0512`.
